--- a/index.html
+++ b/index.html
@@ -533,11 +533,11 @@
         </div>
 
         <button
-          class="btn-ok button"
+          class="button modal-btn"
           type="button"
           onclick="window['dialog-id'].close();"
         >
-          <span class="button__text">ОК</span>
+          <span class="button__text">Оk</span>
         </button>
       </dialog>
     </main>
